--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
 <body>
   <app-root>Loading...</app-root>
   <link rel="stylesheet" href="/index.css">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
 </body>
 </html>
